@@ -59,7 +59,7 @@
         </item>
         <item>
             <key> <string>last_id</string> </key>
-            <value> <string>66</string> </value>
+            <value> <string>68</string> </value>
         </item>
         <item>
             <key> <string>portal_type</string> </key>
