@@ -28,7 +28,7 @@
             <key> <string>categories</string> </key>
             <value>
               <tuple>
-                <string>destination/workflow_module/ung_configuration_workflow/14</string>
+                <string>destination/workflow_module/ung_configuration_workflow/68</string>
               </tuple>
             </value>
         </item>
