@@ -1,2 +1,5 @@
+2011-03-28 Gabriel
+* Add script to configure UNG Web Site
+
 2011-03-24 Gabriel
 * Initial commit.
